color of badge, better responsive, border of section, media query

--- a/index2.html
+++ b/index2.html
@@ -86,13 +86,11 @@
 								</div>
 
 								<div class="badge-man">
-
 									<div class="blue-badge">
 										<span class="badge">
 											<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 										</span>
 									</div>
-
 								</div>
 
 								<div class="user-name"><p>Mark Klein</p></div>
@@ -373,10 +371,11 @@
 					</div>
 				</div>
 
-				<div class="col-md-3">
+			<div class="col-md-3">
+				<div class="aside-carousel">
 					<div class="sidebar">
 						<div class="aside">
-							<div id="secondCarousel" class="carousel" data-ride="carousel">
+							<div id="secondCarousel" class="carousel slide" data-ride="carousel">
 								<ol class="carousel-indicators">
 									<li data-target="#secondCarousel" data-slide-to="0" class="active"></li>
 									<li data-target="#secondCarousel" data-slide-to="1"></li>
@@ -533,16 +532,17 @@
 								</div> <!-- /.inner/ -->
 							</div><!--/sidebar-bottom/-->
 						</div><!--/aside-second/-->
-					</div><!--/carousel/-->
-
-					<div class="img-lookbook">
-						<img src="img/lookBook.png" alt="LookBook">
 					</div>
+				</div><!--/carousel/-->
+					<div class="side-image">
+						<div class="img-lookbook">
+							<img src="img/lookBook.png" alt="LookBook">
+						</div>
 
-					<div class="img-cat">
-						<img src="img/richList.png" alt="richList">
+						<div class="img-cat">
+							<img src="img/richList.png" alt="richList">
+						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
