Increase like number

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="node_modules/jquery/dist/jquery.js"></script>
 	<!-- Latest compiled JavaScript -->
 	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+	<script src="js/scripts.js" ></script>
 </head>
 <body>
 
@@ -142,7 +143,7 @@
 								</div><!-- /.number-like/ -->
 
 								<div class="like">
-									<div class="like-icon">
+									<div onclick="increaseLikeCount(this)" class="like-icon">
 										<img src="img/icon/like.png" alt="Like">
 									</div><!-- /.like-icon/ -->
 								</div><!-- /.like/ -->
@@ -320,7 +321,7 @@
 									</div><!-- /.number-like/ -->
 
 									<div class="like">
-										<div class="like-icon">
+										<div onclick="increaseLikeCount(this)" class="like-icon">
 											<img src="img/icon/like.png" alt="Like">
 										</div><!-- /.like-icon/ -->
 									</div><!-- /.like/ -->
