add link in head for font-awesome and indent codes

--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Exercise 2</title>	
+	<title>Vabble</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="css/style2.css">
-	<!-- jQuery library -->
+	<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src="node_modules/jquery/dist/jquery.js"></script>
-	<!-- Latest compiled JavaScript -->
 	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="js/scripts.js" ></script>
 </head>
 <body>
-
 	<nav class="navbar navbar-light">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
@@ -26,7 +23,6 @@
 			</button>
 			<a class="navbar-brand" href="#"><img src="img/logo.png" width="150"></a>
 		</div>
-
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
@@ -56,9 +52,7 @@
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="img/current-user-img.png" class="img-circle" alt="Current-user"><span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a>
-
 						<ul class="dropdown-menu">
-
 							<li><a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>My profile</a></li>
 
 							<li><a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>My groups</a></li>
@@ -74,7 +68,6 @@
 			</div><!-- /.header-header/ -->
 		</div><!-- /.navbar-collapse/ -->
 	</nav><!-- /.navbar navbar-light/ -->
-
 
 	<div class="container">
 		<div class="row">
@@ -440,7 +433,6 @@
 										</div><!-- /.row-non-profit/ -->
 									</div><!-- /.item active/ -->
 
-
 									<div class="item">
 										<div class="row-sport">
 											<div class="col-xs-3">IRL</div>
@@ -558,15 +550,13 @@
 					</div><!--/.sidebar-bottom/-->
 				</div><!--/.aside-carousel/-->
 
-				
-					<div class="img-lookbook">
-						<img src="img/lookBook.png" alt="LookBook">
-					</div><!--/.side-image/-->
+				<div class="img-lookbook">
+					<img src="img/lookBook.png" alt="LookBook">
+				</div><!--/.side-image/-->
 
-					<div class="img-cat">
-						<img src="img/richList.png" alt="richList">
-					</div><!--/.img-cat/-->
-				
+				<div class="img-cat">
+					<img src="img/richList.png" alt="richList">
+				</div><!--/.img-cat/-->			
 			</div><!-- /.col-md-3/ -->
 		</div><!-- /.row/ -->
 	</div><!-- /.cotainer/ -->
@@ -601,10 +591,5 @@
 			</div><!-- /.footer-navbar/ -->
 		</nav><!-- /.navbar navbar-info navbar-fixed-bottom/ -->
 	</div><!-- /.footer/ -->
-
 </body>
 </html>
-
-
-
-
