change some of img png to be PNG

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><img src="img/logo.png" width="150"></a>
+			<a class="navbar-brand" href="#"><img src="img/logo.PNG" width="150"></a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -38,11 +38,11 @@
 						<div class="arrow-left"></div>
 						<button type="submit" class="btn btn-info"><span class="glyphicon glyphicon-search"></span></button>
 					</form>
-					<li class="dragon"><a href="#"><img src="img/dragon.png" alt="Dragon"></a></li> 
+					<li class="dragon"><a href="#"><img src="img/dragon.PNG" alt="Dragon"></a></li> 
 
 					<li class="letter">
 						<a href="#">
-							<img src="img/letter.png" alt="Letter">
+							<img src="img/letter.PNG" alt="Letter">
 							<div class="yellow-badge">
 								<span class="badge">6
 								</span>
@@ -551,7 +551,7 @@
 				</div><!--/.aside-carousel/-->
 
 				<div class="img-lookbook">
-					<img src="img/lookBook.png" alt="LookBook">
+					<img src="img/lookBook.PNG" alt="LookBook">
 				</div><!--/.side-image/-->
 
 				<div class="img-cat">
