--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="node_modules/jquery/dist/jquery.js"></script>
 	<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="js/scripts.js" ></script>
+	<script src="js/scripts.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-light">
@@ -92,7 +92,7 @@
 									</div><!-- /.blue-badge/ -->
 								</div><!-- /.badge-man/ -->
 
-								<div class="user-name"><p>Mark Klein</p></div>
+								<div class="username"><p>Mark Klein</p></div>
 								<div class="user-uploaded"><p>uploaded</p></div>
 								<div class="user-video"><p>a video</p></div>
 							</div><!-- /.user-header/ -->
@@ -229,7 +229,7 @@
 										</div><!-- /.blue-badge2/ -->
 									</div><!-- /.badge-header-woman/ -->
 
-									<div class="user-name-woman"><p>Rebecca Smith</p></div>
+									<div class="username-woman"><p>Rebecca Smith</p></div>
 									<div class="user-posted"><p>posted</p></div>
 									<div class="user-comment"><p>a comment</p></div>
 								</div><!-- /.user-header-second/ -->
@@ -283,7 +283,7 @@
 													</div><!-- /.blue-badge3/ -->
 												</div><!-- /.badge-middle-header/ -->
 
-												<div class="user-name-woman-third"><p>Chrissy Davis</p></div>
+												<div class="username-woman-third"><p>Chrissy Davis</p></div>
 												<div class="user-uploaded-third"><p>uploaded</p></div>
 												<div class="user-video-third"><p>a video</p></div>
 											</div><!-- /.user-header-third/ -->
